objects/Issues__c.object
<CustomObject>
    <description>Proforce 11/2014</description>
    <fields>
        <fullName>Actions_Comments__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Actions / Comments</inlineHelpText>
        <label>Actions / Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Product Reference Number</inlineHelpText>
        <label>Product Ref Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Link__c</fullName>
        <formula>IF( ISPICKVAL(Application__c, &quot;Siebel&quot;), HYPERLINK(&quot;http://siebel.harrisbroadcast.com/service_enu&quot;, &quot;Siebel Service&quot;),
IF( ISPICKVAL(Application__c, &quot;Fogbugz&quot;), HYPERLINK(&quot;http://fogbugz.harrisbroadcast.com/default.asp?pg=pgLogon&amp;dest=pre%3DpreLogOff&quot;, &quot;Fogbugz&quot;),
IF( ISPICKVAL(Application__c, &quot;Bugzilla&quot;), HYPERLINK(&quot;http://siebel.harrisbroadcast.com/service_enu&quot;, &quot;Bugzilla&quot;),
&quot; &quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Application Issue reported to</inlineHelpText>
        <label>Product Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Siebel</fullName>
                </value>
                <value>
                    <fullName>Fogbugz</fullName>
                </value>
                <value>
                    <fullName>Bugzilla</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Who owns this issue?</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Category__c</fullName>
        <description>Proforce 10/2014</description>
        <inlineHelpText>Issue Category</inlineHelpText>
        <label>Issue Management Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Issue Priority</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Critical</fullName>
                </value>
                <value>
                    <fullName>2-High</fullName>
                </value>
                <value>
                    <fullName>3-Medium</fullName>
                </value>
                <value>
                    <fullName>4-Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Product Line</inlineHelpText>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Playout</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Affected__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Is revenue recognition affected by this issue?</inlineHelpText>
        <label>Revenue Recognition Affected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Case_Number__c</fullName>
        <description>Service Case Number</description>
        <inlineHelpText>Service Case Number</inlineHelpText>
        <label>Service Case Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Customer Site</inlineHelpText>
        <label>Site</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Product__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Product Group</inlineHelpText>
        <label>Sub-Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Sales</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Program Scheduling</fullName>
                </value>
                <value>
                    <fullName>Punctuate</fullName>
                </value>
                <value>
                    <fullName>Traffic and Billing</fullName>
                </value>
                <value>
                    <fullName>Command and Control</fullName>
                </value>
                <value>
                    <fullName>Compress and Transport</fullName>
                </value>
                <value>
                    <fullName>Multiviewers</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Routing Switchers</fullName>
                </value>
                <value>
                    <fullName>T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Automation</fullName>
                </value>
                <value>
                    <fullName>Editing</fullName>
                </value>
                <value>
                    <fullName>Graphics</fullName>
                </value>
                <value>
                    <fullName>Infocaster</fullName>
                </value>
                <value>
                    <fullName>Integrated Playout</fullName>
                </value>
                <value>
                    <fullName>Master Control and Brand</fullName>
                </value>
                <value>
                    <fullName>Media Server</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Subject</inlineHelpText>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>The Target Date is the desired date to resolve the issue from a project perspective.</inlineHelpText>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Issue Title</inlineHelpText>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Issue visibility</inlineHelpText>
        <label>Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Issue</label>
    <nameField>
        <displayFormat>PI-{0000000000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>